@@ -1,3 +1,9 @@
+2007-03-18 Borut Razem <borut.razem AT siol.net>
+
+	* added fuction ls_l_full_time() which executes supported version of
+	  ls -l --full-time
+	* local/mirror-dors.mk: more specific comments about readline
+
 2007-03-17 Borut Razem <borut.razem AT siol.net>
 
 	* local/mirror-doors.mk: added
